# react-native-fast-rsa

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fast-rsa.podspec  tsconfig.json  upgrade_lib_bridge.sh
.github/workflows/: android.yml  ios.yml
android/: CMakeLists.txt  build.gradle  fast-rsa-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastrsa/: FastRsaModule.kt  FastRsaPackage.kt
android/src/main/java/com/reactnativefastrsa/: FastRsaModule.kt  FastRsaPackage.kt
android/src/main/java/dev/jerson/: RNFastRsaModule.java  RNFastRsaPackage.java
cpp/: librsa_bridge.h  react-native-fast-rsa.cpp  react-native-fast-rsa.h
example/: .detoxrc.js  .detoxrc.json  app.json  package.json
example/android/: build.gradle  settings.gradle
example/e2e/: app.e2e.js  app.test.js
example/ios/: .xcode.env.local  File.swift  Podfile
example/src/: App.tsx
ios/: FastRSA.h  FastRSA.mm  FastRsa.h  FastRsa.mm  RNFastRsa.h  RNFastRsa.m
ios/FastRsa.xcodeproj/: project.pbxproj
ios/RNFastRsa.xcodeproj/: project.pbxproj
ios/Rsa.xcframework/: Info.plist
ios/native/: FastRsa.podspec
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh
src/: bridge.ts  index.ts  index.tsx  model.ts  shim.ts  types.d.ts
src/model/: base64-request.ts  convert-j-w-t-request.ts  convert-jwtrequest.ts  convert-key-pair-request.ts  convert-p-k-c-s12-request.ts  convert-pkcs12-request.ts  convert-private-key-request.ts  convert-public-key-request.ts  decrypt-o-a-e-p-bytes-request.ts  decrypt-o-a-e-p-request.ts  decrypt-oaepbytes-request.ts  decrypt-oaeprequest.ts  decrypt-p-k-c-s1v15-bytes-request.ts  decrypt-pkcs1v15-bytes-request.ts  decrypt-pkcs1v15-request.ts  decrypt-pkcs1v15request.ts  decrypt-private-key-request.ts  encrypt-o-a-e-p-bytes-request.ts  encrypt-o-a-e-p-request.ts  encrypt-oaepbytes-request.ts  encrypt-oaeprequest.ts  encrypt-p-k-c-s1v15-request.ts  encrypt-pkcs1v15-bytes-request.ts  encrypt-pkcs1v15-request.ts  encrypt-pkcs1v15bytes-request.ts  encrypt-private-key-request.ts  generate-request.ts  hash-request.ts  hash.ts  key-pair-response.ts  key-pair.ts  metadata-private-key-request.ts  metadata-public-key-request.ts  p-k-c-s12-key-pair-response.ts  p-k-c-s12-key-pair.ts  pemcipher.ts  pkcs12-key-pair-response.ts  (+23 more)
(+38 files in other folders)
